--- a/index.html
+++ b/index.html
@@ -39,12 +39,9 @@
         <div id="spinner"></div>
     </div>
     <div id="header" class="animated slideInDown" style="animation-delay:0.0s;">
-    <div id="title">Automated by Artificial Inteligence</div><br>
+    <div id="title"> </div><br>
     <div id="links">
-        <a href="#Autonomous_Driving">Autonomous Driving</a>
-        <a href="#Lunar_Landing">Lunar Landing</a>
-        <a href="#Driving_Game">Driving Game</a>
-        <a href="../">Back to Main Page</a>
+
     </div>
     </div>
 
@@ -84,12 +81,7 @@
 
 	</div></div></div>
 
-    <div id="footer">
-	    <font size=5>
-	     <br>Click <a href="..">here</a> to return to the main page<br> 
-	    
-	    </font>
-    </div>
+    
 
 </body>
 
