--- a/launcher/index.html
+++ b/launcher/index.html
@@ -45,7 +45,7 @@
     <div id="links">
         <a href="#video">Video</a>
         <a href="#Live_3D_model" >Live 3D model</a>
-        <a href="../">Back to Main Page</a>
+        <a href="../#projects">Back to Main Page</a>
     </div>
     </div>
 
@@ -140,7 +140,7 @@
 
     <div id="footer">
 	    <font size=5>
-	     <br>Click <a href="..">here</a> to return to the main page<br> 
+	     <br>Click <a href="../#projects">here</a> to return to the main page<br> 
 	    
 	    </font>
     </div>
