--- a/photogrammetry/index.html
+++ b/photogrammetry/index.html
@@ -68,7 +68,7 @@
         <a href="#Live_3D_model" >Live 3D model</a>
         <a href="#Screenshots">Screenshots</a>
         <a href="#Downloads">Downloads</a>
-        <a href="../">Back to Main Page</a>
+        <a href="../#projects">Back to Main Page</a>
     </div>
     </div>
 
@@ -154,7 +154,7 @@
 
     <div id="footer">
 	    <font size=5>
-	     <br>Click <a href="..">here</a> to return to the main page<br> 
+	     <br>Click <a href="../#projects">here</a> to return to the main page<br> 
 	    
 	    </font>
     </div>
