--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <title>Computing, Engineering and Mathematics</title>
     
-    <link rel="stylesheet" href="../common/animate.min.css">
+    <link rel="stylesheet" href="./common/animate.min.css">
     <link href="./common/Comfortaa.css" rel="stylesheet">
     <script src="./common/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./common/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
