--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
     	<div id="footer">
 	    <font size=5>
 	     <br>Click <a href="https://github.com/r-nr/sites" target='_blank'>here</a> to view the source code of this website<br> 
-	    
+	    </font>
+	    <font size=3>
+	     <br>Site and projects by Ryan L<br> 
 	    </font>
     	</div>
 
