--- a/launcher/index.html
+++ b/launcher/index.html
@@ -143,6 +143,9 @@
 	     <br>Click <a href="../#projects">here</a> to return to the main page<br> 
 	    
 	    </font>
+	    <font size=3>
+	     <br>Site and projects by Ryan L<br> 
+	    </font>
     </div>
 
 </body>
